# NineChronicles.IAP

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.Api  Dockerfile.Worker  README.md  alembic.ini  app.py  cdk.context.json  config.template  docker-compose.yml  iam_role_example.json  pyproject.toml  tsconfig.json
.github/workflows/: build_docker.yml  build_frontend.yml  build_layer.yml  deploy.yml  (+5 more)
alembic/: env.py
api/: config.py  main.py
apps/api/: main.py  pyproject.toml
apps/api/app/: celery.py  config.py  dependencies.py  mileage.py
apps/api/app/api/: __init__.py  admin.py  l10n.py  mileage.py  product.py  purchase.py  redeem.py  validate.py
apps/api/app/utils/: __init__.py  apple.py  import_utils.py  r2.py  s3.py
apps/shared/: README.md  alembic.ini  pyproject.toml
apps/shared/shared/: _crypto.py  _graphql.py  consts.py  enums.py
apps/shared/shared/lib9c/: exceptions.py
apps/shared/shared/lib9c/actions/: __init__.py  burn_asset.py  claim_items.py  grant_items.py  issue_token.py  issue_tokens_from_garage.py  transfer_assets.py  unload_from_my_garages.py
apps/shared/shared/lib9c/models/: currency.py  fungible_asset_value.py
apps/shared/shared/models/: mileage.py  product.py  receipt.py  user.py  voucher.py
apps/shared/shared/schemas/: l10n.py  message.py  mileage.py  product.py  receipt.py  redeem.py
apps/shared/shared/utils/: actions.py  address.py  apple.py  balance.py  google.py  import_utils.py  r2.py  transaction.py
apps/shared/shared/validator/: apple.py  common.py  google.py  web.py
apps/shared/tests/: test_graphql.py
apps/shared/tests/lib9c/models/: test_address.py  test_currency.py  test_fungible_asset_value.py
apps/shared/tests/schemas/: test_web_schema.py
apps/shared/tests/validator/: test_common.py  test_stripe_web.py  test_web.py
apps/shared/tool/migrations/: env.py
apps/shared/tool/migrations/versions/: 065b2b11e898_add_package_name_into_receipt_table.py  2822c456abc3_add_unique_constraint.py  2e9204a46dc7_update_receipt_model.py  4beb3c9fcd4b_set_non_nullable_columns.py  5618fef65b02_add_web_and_web_test_to_store_enum.py  64dd54c4aef4_update_receipt_model.py  68b7c1c6a241_add_new_receipt_status.py  7161042128cc_merge_package_name_and_apple_sku.py  73e03cbf8ba2_update_fungible_asset_product_to_use_.py  88d48811f7a9_create_receipt_model.py  90ff6ac09fe5_add_required_level_column.py  b1d5e1dc71ea_add_redeem_to_store_enum.py  b3b8a0d4eba5_models_for_mileage.py  b5e0d5e83ff7_add_active_to_price_model.py  b600e296a7df_create_product_model.py  f6de778b7fe3_add_avatarlevel_table.py  f7b21b5e99be_added_timezone_in_product.py
apps/worker/: pyproject.toml
apps/worker/app/: celery_app.py  config.py
apps/worker/app/tasks/: __init__.py  retryer.py  send_product_task.py  status_monitor.py  track_google_refund.py  tracker.py
apps/worker/tests/: test_status_monitor.py  test_track_google_refund.py
backoffice/: auth.py  database.py  main.py  r2.py
common/: .gitignore  __init__.py  _crypto.py  _graphql.py  alembic.ini.example  consts.py  enums.py  pyproject.toml  shared_stack.py  utils.py
common/alembic/: env.py
common/alembic/versions/: 1ab63d3081f4_delete_unused_models.py  32e8805e8364_add_time_limit_receipt_status.py  3378efa82b6c_add_apple_sku_for_k.py  3c5ca13ddcf5_add_planet_id_to_sign_history.py  3c96c08258a1_update_product_model.py  3e29896ac79d_create_garage_models.py  4673eee05e67_update_receiptstatus.py  57e65ed34bd6_update_db_schema_to_manage_tx_data.py  5bf8ab4f3b13_add_voucher_request_table.py  5e7148bfcf36_mileage_history_table.py  6cdd269f8204_planet_id_of_mileage_is_nullable.py  74f4b954bd1b_update_product_model_add_l10n.py  88d48811f7a9_create_receipt_model.py  88d48811f7a9_update_receipt_model.py  8c0698de32b6_add_uuid_column_to_signhistory.py  91a49d2a3db2_update_receipt_model.py  a2df38682595_add_is_free_column.py  b3b8a0d4eba5_models_for_mileage.py  b4f422fd0e05_update_product_model.py  b600e296a7df_create_product_model.py  b7a685e5ef1c_add_planet_id.py  bbbcfcbe1487_delete_planet_id_to_merge_mileage.py  bdb01e673e04_.py  c67c061f66e8_make_nullable_for_test_receipt.py  cbd830b64808_create_product_model.py  d09361e553f0_update_product_model_add_paths.py  da51c592e62c_create_signhistory_model.py  e75f93e4cc06_add_message_column_to_receipt.py  ebf65a2e4fb4_create_item_and_box_model.py
common/lib9c/: currency.py  fungible_asset.py
common/lib9c/actions/: __init__.py  burn_asset.py  claim_items.py  issue_token.py  issue_tokens_from_garage.py  transfer_assets.py  unload_from_my_garages.py
common/lib9c/models/: address.py  currency.py  fungible_asset_value.py
common/models/: __init__.py  base.py  box.py  garage.py  item.py  l10n.py  mileage.py  product.py  receipt.py  sign.py  user.py  voucher.py
common/schemas/: product.py
common/scripts/: update_alembic_ini.py
common/utils/: actions.py  address.py  apple.py  aws.py  garage.py  google.py  import_utils.py  receipt.py  s3.py  transaction.py
frontend/: tailwind.config.cjs
iap/: .gitignore  __init__.py  dependencies.py  exceptions.py  iap_cdk_stack.py  main.py  pyproject.toml  utils.py  views.py
script/: add_thor_path.py  cache_avatar_level.py  merge_mileage.py  move_mileage.py  set_item.py
scripts/: category_product.py  fungible_asset.py  fungible_item.py  process_google_iap.py  process_product.py  products.py  pyproject.toml  retry-all.py  s3-main.py  s3.py  s3_main.py
tests/: conftest.py  test_image_link.py
worker/: .gitignore  __init__.py  pyproject.toml  sample_event.json.example  template.yml  template.yml.example  worker_cdk_stack.py
worker/controller/: base.py  iap.py
worker/function/: handler.py  manual.py  tracker.py
worker/schema/: sqs.py
worker/worker/: _crypto.py  _graphql.py  garage_noti.py  golden_dust_by_ncg.py  google_refund_tracker.py  gql.py  handler.py  issue_tokens.py  lambda_warmer.py  manual.py  status_monitor.py  tracker.py  unload_data.json.example  updater.py  voucher.py
worker/worker/manual/: burn_asset.py  issue_token.py  transfer_assets.py
worker/worker/schemas/: aws.py
(+91 files in other folders)
