[tool.poetry]
name = "ninechronicles-iap"
version = "0.1.0"
description = "NineChronicles In-app Purchase Service"
authors = ["hyeon <hyeon+iap@planetariumhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Main, Common
python = "^3.10"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
boto3 = "^1.28.46"
requests = "^2.31.0"
google-api-python-client = "^2.99.0"
gql = { extras = ["requests"], version = "^3.4.1" }
eth-utils = "^2.2.0"
pycryptodome = "^3.18.0"
eth-account = "^0.9.0"
pydantic="^2.3.0"
pyjwt = "^2.8.0"
cryptography = "^41.0.4"

[tool.poetry.group.iap.dependencies]
# IAP API
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
mangum = "^0.17.0"

[tool.poetry.group.worker.dependencies]
# IAP Worker
pyasn1 = "^0.5.0"
hexbytes = "^0.3.1"
google-auth-oauthlib = "^1.1.0"

[tool.poetry.group.dev.dependencies]
# Only for development
ipython = "^8.13.1"
pytest = "^7.3.1"
alembic = "^1.12.0"
aws-cdk-lib = "2.96.2"
constructs = "^10.2.70"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
