[tool.poetry]
name = "ninechronicles-iap/common"
version = "0.1.0"
description = "Common modules for 9c In-app purchase process"
authors = ["hyeon <hyeon+iap@planetariumhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
