[tool.poetry]
name = "worker"
version = "0.1.0"
description = "AWS Lambda Worker for 9c In-app purchase process"
authors = ["hyeon <hyeon+iap@planetariumhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gql = "^3.4.1"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
pyasn1 = "^0.5.0"
web3 = "^6.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
