[tool.poetry]
name = "api"
version = "1.14.0"
description = "NineChronicles In-app Purchase Service"
authors = ["hyeon <hyeon+iap@planetariumhq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Main, Common
python = "^3.11"
structlog = "^25.2.0"
pydantic-settings = "^2.8.1"
fastapi = "^0.110.0"
fastapi-cache2 = "^0.2.1"
uvicorn = "^0.23.2"
cryptography = "^41.0.7"
celery = { extras = ["redis"], version = "^5.4" }
python-multipart = "^0.0.20"
stripe = "^13.0.1"
httpx = "^0.28.1"
shared = {path = "../shared"}

[tool.isort]
profile = "black"

[tool.poetry.group.test.dependencies]
pytest = "^7.0,<7.2"
pytest-mock = "^3.6.0,<3.10"
pytest-cov = "^2.10.0,<3.0.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.971"
types-requests = "^2.29.1"
types-PyYAML = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0,<3.0.0"
black = "^22.6.0"
isort = "^5.0.6,<6.0.0"
colorama = "^0.4.6"

[tool.poetry.group.tool.dependencies]
alembic = "^1.12.0"
