[tool.poetry]
name = "shared"
version = "1.0.8"
description = "Shared library for iap service"
authors = ["Planetarium <engineering@planetariumhq.com>"]
readme = "README.md"
include = ["shared/*"]
exclude = [".env.sample", "tests/*", "tool/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
bencodex = "^1.0.1"
pydantic="^2.6.4"
gql = { extras = ["requests"], version = "^3.5.0" }
pyjwt = "^2.8.0"
pycryptodome = "^3.20.0"
eth-account = "^0.9.0"
eth-utils = "^2.2.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.122.0"
boto3 = "^1.28.46"

[tool.poetry.group.test.dependencies]
pytest = "^7.0,<7.2"
pytest-mock = "^3.6.0,<3.10"
pytest-cov = "^2.10.0,<3.0.0"

[tool.poetry.group.type.dependencies]
mypy = "^0.971"
types-requests = "^2.29.1"
types-PyYAML = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0,<3.0.0"
black = "^22.6.0"
isort = "^5.0.6,<6.0.0"

[tool.poetry.group.tool.dependencies]
alembic = "^1.12.0"
